force-app/main/default/objects/Project_Charges__c/Project_Charges__c.object-meta.xml
<CustomObject>
    <label>Project Charges</label>
    <nameField>
        <label>Project Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Charges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>