force-app/main/default/objects/Project_Charges__c/fields/Applied_at_the_time_of_FCN__c.field-meta.xml
<CustomField>
    <fullName>Applied_at_the_time_of_FCN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied at the time of FCN</label>
    <type>Checkbox</type>
</CustomField>