force-app/main/default/objects/Project_Charges__c/fields/Applied_This_Charge_To_FA__c.field-meta.xml
<CustomField>
    <fullName>Applied_This_Charge_To_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply This Charge</label>
    <type>Checkbox</type>
</CustomField>