force-app/main/default/objects/Project_Charges__c/fields/Area_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Area_Type_Id__c</fullName>
    <label>Area Type Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>