force-app/main/default/objects/Project_Charges__c/fields/Brokerage_Applicable_on_this_charge__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Applicable_on_this_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage Applicable on this charge</label>
    <type>Checkbox</type>
</CustomField>