force-app/main/default/objects/Project_Charges__c/fields/Brokerage_Based_on_Basic__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Based_on_Basic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage Based on Basic</label>
    <type>Checkbox</type>
</CustomField>