force-app/main/default/objects/Project_Charges__c/fields/Charge_Code1__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code1__c</fullName>
    <formula>Charge_Code__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code</label>
    <type>Text</type>
</CustomField>