force-app/main/default/objects/Project_Charges__c/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>Global_Charges__c</referenceTo>
    <relationshipLabel>Project Charges</relationshipLabel>
    <relationshipName>Project_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>