force-app/main/default/objects/Project_Charges__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Charge_Code__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>