force-app/main/default/objects/Project_Charges__c/fields/Interest_Applicable_on_this_charge__c.field-meta.xml
<CustomField>
    <fullName>Interest_Applicable_on_this_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Applicable on this charge</label>
    <type>Checkbox</type>
</CustomField>