force-app/main/default/objects/Project_Charges__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>