force-app/main/default/objects/Project_Charges__c/fields/S_Charge_Bucket__c.field-meta.xml
<CustomField>
    <fullName>S_Charge_Bucket__c</fullName>
    <description>This is used for grouping the charges under appropriate headers while creating the cost sheet/ quotations</description>
    <label>Charge Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Society Charges</fullName>
            </value>
            <value>
                <fullName>Stamp Duty and Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>