force-app/main/default/objects/Project_Charges__c/fields/S_Charge_Calculated_As__c.field-meta.xml
<CustomField>
    <fullName>S_Charge_Calculated_As__c</fullName>
    <label>Charge Calculated As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rate List at Unit Level</fullName>
            </value>
            <value>
                <fullName>Lumpsum at Project Level</fullName>
            </value>
            <value>
                <fullName>Higher of Ready Reckoner or Agreement Value</fullName>
            </value>
            <value>
                <fullName>Higher of Ready Reckoner or Flatcost</fullName>
            </value>
            <value>
                <fullName>Percentage of Agreement Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>