force-app/main/default/objects/Project_Charges__c/fields/S_Charge_Percentage__c.field-meta.xml
<CustomField>
    <fullName>S_Charge_Percentage__c</fullName>
    <description>For charges which are a percentage of some value [say the Ready Reckoner or flat cost]</description>
    <label>Charge %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>