force-app/main/default/objects/Project_Charges__c/fields/S_Lumpsum_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>S_Lumpsum_Charge_Amount__c</fullName>
    <label>Lumpsum Charge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>