force-app/main/default/objects/Project_Charges__c/fields/Service_Tax_Applicable_on_this_charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Applicable_on_this_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Tax Applicable on this charge</label>
    <type>Checkbox</type>
</CustomField>