force-app/main/default/objects/Project_Charges__c/fields/Service_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Percentage__c</fullName>
    <label>Service Tax Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Tax 1</fullName>
            </value>
            <value>
                <fullName>Service Tax 2</fullName>
            </value>
            <value>
                <fullName>Service Tax 3</fullName>
            </value>
            <value>
                <fullName>Service Tax 4</fullName>
            </value>
            <value>
                <fullName>Service Tax 5</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>GST-18</fullName>
            </value>
            <value>
                <fullName>GST 5%</fullName>
            </value>
            <value>
                <fullName>GST 0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>