force-app/main/default/objects/Project_Charges__c/fields/Unique_Field__c.field-meta.xml
<CustomField>
    <fullName>Unique_Field__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>